--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -159,11 +159,7 @@ $(document).ready(function(){
          {% for item in adtaste %}
         <tr>
           <td>
-         {% if item.incentiveType==1 %}
-         cpa
-         {% else %}
-         cps
-         {% endif %}
+        {{ item.displayName }}
           </td>
           <td><a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">{{ item.title }}</a> </td>
           <td>{% if item.incentiveType==1 %}
@@ -175,7 +171,7 @@ $(document).ready(function(){
           <td>{% if item.orderStatus==1  %} 已领取
              {% elseif item.orderStatus==2  %} 确认中
               {% elseif item.orderStatus==3  %} 已完成
-          {% elseif item.orderStatus==3  %} 任务失败
+          {% elseif item.orderStatus==4  %} 任务失败
           {% else %}{% endif %}
           </td>
         </tr>
