--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -6,6 +6,7 @@
       <ul>
         <li><a href="{{ path('_default_index') }}">首页</a></li>
         <li><a href="{{ path('_advertiserment_list')}}">体验广告</a></li>
+        <li><a href="{{ path('_shopping_list')}}">购物返利</a></li>
         <li><a href="{{ path('_exchange_index')}}">兑换中心</a></li>
         <li><a href="{{ path('_default_about')}}">关于我们</a></li>
         <li class="last"><a href="{{ path('_default_help')}}">帮助中心</a></li>
