--- a/src/Jili/ApiBundle/Resources/views/Admin/editPostion.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/editPostion.html.twig
@@ -6,7 +6,7 @@
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 </HEAD>
 <BODY>
-<form action="{{ path('_admin_editPostion',{'id':adver.id}) }}" method="post" id="form1" >
+<form action="{{ path('_admin_editPostion',{'id':adver.aid}) }}" method="post" id="form1" >
 <table align='center'>
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td>&nbsp;</td><td>
@@ -20,8 +20,14 @@
 </td></tr>
 <tr height='60'><td align="right">广告标题:</td><td>{{ adver.title }}</td></tr>
 <tr height='60'><td align="right">广告图片:</td><td><img src="{{ asset(adver.listImage)}}"/></td></tr>
-<tr height='60'><td align="right">广告位置:</td><td><input type="radio" name="position" value="2" {% if adver.type==2 %} checked="checked" {% endif %}/>推荐
-<input type="radio" name="position" value="1" {% if adver.type==1 %} checked="checked" {% endif %}/>不推荐</td></tr>
+<tr height='60'><td align="right">广告位置:</td><td>
+<input type="radio" name="position" value="1" {% if adver.type==1 %} checked="checked" {% endif %}/>首页
+<input type="radio" name="position" value="2" {% if adver.type==2 %} checked="checked" {% endif %}/>广告推荐
+<input type="radio" name="position" value="3" {% if adver.type==3 %} checked="checked" {% endif %}/>广告不推荐
+<input type="radio" name="position" value="4" {% if adver.type==4 %} checked="checked" {% endif %}/>购物推荐
+<input type="radio" name="position" value="5" {% if adver.type==5 %} checked="checked" {% endif %}/>购物不推荐
+</td></tr>
+
 <tr height='60'><td align="right">广告位置序号:</td><td><input type="text" name="number" size='30' value="{{ adver.position  }}"/></td></tr>
 <tr height='60'><td>&nbsp;</td><td><input type="submit" name="add" value="提 交"/></td></tr>
 </table>
