--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -59,8 +59,17 @@
             href="javascript:void(0);">广告位置管理</A></TD></TR>
         <TR height=4>
           <TD></TD></TR></TABLE>
+          
+          
       <TABLE id=child2 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
       width=150 border=0>
+       <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_addPostion') }}" 
+            target=main>添加广告位置</A></TD></TR>
+            
         <TR height=20>
           <TD align=middle width=30><IMG height=9 
             src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
