--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -66,7 +66,7 @@ function goto(){
                  {% elseif orderStatus==3 %}
                <span class="getBtn"> <img src="{{ asset('images/finishBtn.jpg')}}" /> </span>                                                
                  {% elseif orderStatus==4 %} 
-                  <span class="getBtn">  <img src="{{ asset('images/unpassBtn.jpg .jpg')}}" /></span>                                                       
+                  <span class="getBtn">  <img src="{{ asset('images/unpassBtn.jpg')}}" /></span>                                                       
                  {% else %}                                                       
 	             {% endif %}
            {% else %}
@@ -81,7 +81,7 @@ function goto(){
                          {% elseif orderStatus==3 %}
                        <span class="getBtn">  <img src="{{ asset('images/finishBtn.jpg')}}" /> </span>                                             
                           {% elseif orderStatus==4 %} 
-                     <span class="getBtn"> <img src="{{ asset('images/unpassBtn.jpg .jpg')}}" />  </span>   
+                     <span class="getBtn"> <img src="{{ asset('images/unpassBtn.jpg')}}" />  </span>   
                           {% else %}                                                                                               
         	             {% endif %}
     	      {% else %}
