--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML><HEAD>
-<META http-equiv=Content-Type content="text/html; charset=UTF8">
+<META http-equiv=Content-Type content="text/html; charset=UTF-8">
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
 <SCRIPT language=javascript>
 	function expand(el)
@@ -137,6 +137,26 @@
             target=main>导入成果网数据</A></TD></TR>
         <TR height=4>
           <TD colSpan=2></TD></TR></TABLE>
+          
+          
+           <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+        <TR height=22>
+          <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
+            class=menuParent onclick=expand(6) 
+            href="javascript:void(0);">兑换信息管理</A></TD></TR>
+        <TR height=4>
+          <TD></TD></TR></TABLE>
+      <TABLE id=child6 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      width=150 border=0>
+        <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_exchangeInfo') }}" 
+            target=main>兑换信息导出</A></TD></TR>
+        <TR height=4>
+          <TD colSpan=2></TD></TR></TABLE>
+          
       </BODY></HTML>
     
 
