对应 issue #138 cps 设置incentive,order_price记录数据 ,任务历史显示米粒数,point_history积分用incentive加

--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -76,16 +76,16 @@ function goto(){
     	      {% if orderStatus %}
             	      {% if orderStatus==1 %}
         	          <a href="javascript:void(0);" class="getBtn"  onclick="goto();"><img src="{{ asset('images/continueBtn.jpg')}}" /></a> 
-                         {% elseif orderStatus==2 %}
-                       <span class="getBtn"><img src="{{ asset('images/oncheckBtn.jpg')}}" />  </span>                                                 
+            	      {% elseif orderStatus==2 %}
+                       <span class="getBtn"><img src="{{ asset('images/oncheckBtn.jpg')}}" /><a onclick="goto();"> <img src="{{ asset('images/againBuy.jpg')}}" /></a></span>  
                          {% elseif orderStatus==3 %}
-                       <span class="getBtn">  <img src="{{ asset('images/finishBtn.jpg')}}" /> </span>                                             
+                       <span class="getBtn"><img src="{{ asset('images/finishBtn.jpg')}}" /><a onclick="goto();"> <img src="{{ asset('images/againBuy.jpg')}}" /></a></span>  
                           {% elseif orderStatus==4 %} 
-                     <span class="getBtn"> <img src="{{ asset('images/unpassBtn.jpg')}}" />  </span>   
+                      <span class="getBtn"><img src="{{ asset('images/unpassBtn.jpg')}}" /><a onclick="goto();"> <img src="{{ asset('images/againBuy.jpg')}}" /></a></span>  
                           {% else %}                                                                                               
         	             {% endif %}
     	      {% else %}
-    	            <a class="getBtn" id="getTask" onclick="goto();"><img src="{{ asset('images/getBtn.jpg')}}" /></a>
+    	            <a class="getBtn" id="getTask" onclick="goto();"><img src="{{ asset('images/getBtn.jpg')}}" /></a></span>
     	     {% endif %}
       {% endif %}
   </div>
