--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -164,8 +164,11 @@ $(document).ready(function(){
           <td><a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">{{ item.title }}</a> </td>
           <td>{% if item.incentiveType==1 %}
                  {{ item.incentive }}米粒
-                 {% else %}
-                 最高获消费额{{ item.incentiveRate }}%的米粒
+                {% else %}
+                     {% if item.orderStatus > 1 %}
+                        {{ item.incentive }}米粒
+                     {% else %}
+                                                                         最高获消费额{{ item.incentiveRate }}%的米粒{% endif %}
                  {% endif %}</td>
           <td>{{ item.createTime.date }}</td>
           <td>{% if item.orderStatus==1  %} 已领取
