对应 issue #138 继续返利链接右对齐

--- a/web/css/adMore.css
+++ b/web/css/adMore.css
@@ -86,6 +86,7 @@
 	color:#666666;
 }
 .actionTitle .getBtn{
+	text-align: center;
     display: inline-block;
     height: 73px;
     position: absolute;
