--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -56,7 +56,7 @@ $(document).ready(function(){
     	    {% endif %}
         </div>
         <form action="{{ path('_user_info') }}" method="post" {{ form_enctype(form) }} id="form1">
-        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ path('_user_changePwd') }}">修改密码</a></p>
+        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ asset(path('_user_changePwd'),'cdn1') }}">修改密码</a></p>
         <p>{{ form_widget(form.attachment) }}<a class="upload">上传头像</a></p>
         <!-- <a class="upload" href="">上传头像</a> -->
         <p> {% if code %}
@@ -161,7 +161,7 @@ $(document).ready(function(){
           <td>
         {{ item.displayName }}
           </td>
-          <td><a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">{{ item.title }}</a> </td>
+          <td><a href="{{ asset(path('_advertiserment_index',{'id':item.adid}),'cdn1') }}" target="_blank">{{ item.title }}</a> </td>
           <td>{% if item.incentiveType==1 %}
                  {{ item.incentive }}米粒
                 {% else %}
@@ -179,7 +179,7 @@ $(document).ready(function(){
           </td>
         </tr>
          {% endfor %}
-         <center><p><a href="{{ path('_user_adtaste',{'type': 1}) }}">更多</a></p></center>
+         <center><p><a href="{{ asset(path('_user_adtaste',{'type': 1}),'cdn1') }}">更多</a></p></center>
          {% endif %}
       </table>
      
@@ -206,7 +206,7 @@ $(document).ready(function(){
           <td>{% if item.status %} 兑换成功  {% else %} 处理中 {% endif %}</td>
         </tr>
         {% endfor %}
-          <center><p><a href="{{ path('_user_exchange',{'type': 1}) }}">更多</a></p></center>
+          <center><p><a href="{{  asset(path('_user_exchange',{'type': 1}),'cdn1') }}">更多</a></p></center>
           {% endif %}
       </table>
     
