--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -6,6 +6,7 @@
       <ul>
         <li><a href="{{ path('_default_index')  }}">首页</a></li>
         <li><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}">体验广告</a></li>
+        <li><a href="{{ asset(path('_shopping_list'),'cdn1') }}">购物返利</a></li>
         <li><a href="{{ asset(path('_exchange_index'),'cdn1')  }}">兑换中心</a></li>
         <li><a href="{{ asset(path('_default_about'),'cdn1')  }}">关于我们</a></li>
         <li class="last"><a href="{{ asset(path('_default_help'),'cdn1')  }}">帮助中心</a></li>
