--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -86,21 +86,32 @@ function addClass(type){
           <td>
          {{ item.displayName }}
           </td>
-          <td><a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">{{ item.title }}</a> </td>
-          <td>{% if item.incentiveType==1 %}
-                 {{ item.incentive }}米粒
-                 {% else %}
+          <td>{% if item.adid %}<a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">{{ item.title }}</a>
+              {% else%}
+              <a href="{{ path('_game_index') }}" target="_blank">{{ item.title }}</a>
+              {% endif %} 
+          </td>
+          <td>{% if item.incentiveType==2 %}
                      {% if item.orderStatus > 1 %}
                         {{ item.incentive }}米粒
                      {% else %}
-                                                                         最高获消费额{{ item.incentiveRate }}%的米粒{% endif %}
-                 {% endif %}</td>
-          <td>{{ item.createTime.date }}</td>
-          <td>{% if item.orderStatus==1  %} 已领取
-             {% elseif item.orderStatus==2  %} 确认中
-              {% elseif item.orderStatus==3  %} 已完成
-          {% elseif item.orderStatus==4  %} 任务失败
-          {% else %}{% endif %}
+                     {% endif %}
+              {% else %}
+                     {{ item.incentive }}米粒
+              {% endif %}</td>
+          <td>{% if item.createTime %}{{ item.createTime.date }}{% endif %}</td>
+          <td>{% if item.incentiveType==1 or item.incentiveType==2 %}
+                  {% if item.orderStatus==1  %} 已参加
+                  {% elseif item.orderStatus==2  %} 确认中
+                  {% elseif item.orderStatus==3  %} 已完成
+                  {% elseif item.orderStatus==4  %} 任务失败
+                  {% else %}{% endif %}
+              {% else %}
+                  {% if item.orderStatus==0  %} 确认中
+                  {% elseif item.orderStatus==1  %} 已完成
+                  {% else %} 任务失败
+                  {% endif %}
+              {% endif %}
           </td>
         </tr>
          {% endfor %}
