--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -5,6 +5,7 @@
     <nav id="menu">
       <ul>
         <li><a href="{{ path('_default_index')  }}">首页</a></li>
+        <li><a href="{{ asset(path('_game_index'),'cdn1')  }}">游戏体验</a></li>
         <li><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}">体验广告</a></li>
         <li><a href="{{ asset(path('_shopping_list'),'cdn1') }}">购物返利</a></li>
         <li><a href="{{ asset(path('_exchange_index'),'cdn1')  }}">兑换中心</a></li>
