--- a/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Game/index.html.twig
@@ -15,7 +15,7 @@
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript" src="{{ asset('js/control.js')}}"></script>
 </head>
-<body id="home">
+<body>
 {% include 'JiliApiBundle::header.html.twig' %}
  <div id="container">
          <!--    *** ▼▼▼ Header ▼▼▼ ********************    -->
@@ -37,23 +37,23 @@
                      <table class="table_list">
                          <tr>
                              <th width="200">第1名</th>
-                             <td>奖励10,000积分</td>
+                             <td>奖励10,000米粒</td>
                          </tr>
                          <tr>
                              <th>第2名</th>
-                             <td>奖励5,000积分</td>
+                             <td>奖励5,000米粒</td>
                          </tr>
                          <tr>
                              <th>第3名</th>
-                             <td>奖励3,000积分</td>
+                             <td>奖励3,000米粒</td>
                          </tr>
                          <tr>
                              <th>第4～10名</th>
-                             <td>奖励1,000积分</td>
+                             <td>奖励1,000米粒</td>
                          </tr>
                          <tr>
                              <th>第11～1000名</th>
-                             <td>奖励3积分</td>
+                             <td>奖励3米粒</td>
                          </tr>
                      </table>
                      
@@ -66,7 +66,7 @@
                          <dt>■通关是奖励的道具</dt>
                          <dd>
                               <p>
-								 通关者除了获得上述记载的积分奖励以外，还将获得道具的奖励。
+								 通关者除了获得以上积分奖励以外，还将获得道具的奖励。
                               </p>
                          </dd>
                      </dl>
@@ -74,12 +74,12 @@
                          <dt>■全勤奖</dt>
                          <dd>
                              <p>
-								 1周之内不间断连续参加游戏的朋友，将全员获得全勤奖。
+								 1周之内连续参加游戏的朋友，将获得全勤奖。
                              </p>
                          </dd>
                      </dl>
                      
-                     <span class="red fClear">※取得了通关时授予的道具奖励的朋友，将不能再取得全勤奖的道具奖励。敬请见谅！</span>
+                     <span class="red fClear">※取得了通关时授予的道具奖励的朋友，将不能再取得全勤奖的奖励。敬请见谅！</span>
                      
                  </dd>
              </dl>
@@ -90,21 +90,21 @@
                  <dd class="frame">
                      <dl class="step">
                          <dt>STEP1</dt>
-                         <dd><p>・点击「马上开始游戏」按钮来访问游戏。</p></dd>
-                         <dd><p>・游戏开始以后，您将能看到游戏画面。</p></dd>
+                         <dd><p>・点击「<font class="red fClear">开始游戏</font>」按钮来访问游戏。</p></dd>
+                         <dd><p>・游戏开始以后，您将看到游戏画面。</p></dd>
                      </dl>
                                           
                      <dl class="step">
                          <dt>STEP2</dt>
-                         <dd><p>・点击「摇骰子」或者是「使用道具」按钮</p></dd>
+                         <dd><p>・点击「摇骰子」或者「使用道具」按钮</p></dd>
                          <dd><p>・当您点击了「摇骰子」按钮以后，骰子将会自动摇动，通过得到的骰子点数来决定您往前行走的步数。</p></dd>
-                         <dd><p>・当您点击了「使用道具」按钮以后，您现在所持有的道具一览将会显示在您的眼前。</p></dd>
+                         <dd><p>・当您点击了「使用道具」按钮以后，道具一览将会显示在您的眼前。</p></dd>
                      </dl>
                      
                      <dl class="step">
                          <dt>STEP3</dt>
                          <dd>
-                             <p>・游戏人物将会按照您摇出骰子的点数来自动前行。游戏也将根据您的游戏人物停止的地点，来进行一系列的游戏活动。★</p>
+                             <p>・小鸡将会按照您摇出骰子的点数来自动前行。游戏也将根据小鸡停止的地点，来进行一系列的游戏活动。★</p>
                              <table>
                                  <tr>
                                      <td><img src="{{ asset("images/map_1.png") }}" width="60" height="60" alt="积分码" align="left"/><strong>积分码</strong><p>可以获得积分</p></td>
@@ -125,7 +125,7 @@
                      <dl class="step">
                          <dt>STEP4</dt>
                          <dd><p>・当广告画面显示出来的时候，游戏就结束了！欢迎您明天继续参加游戏。★</p></dd>
-                         <dd><p>・游戏信息的「现在的排名」上显示了您的排名信息。</p></dd>
+                         <dd><p>・游戏状态的「本周排名」上显示了您的排名信息。</p></dd>
                      </dl>
                  </dd>
              </dl>
@@ -138,15 +138,13 @@
                          <dt>■游戏重置的时间</dt>
                          <dd>
                              <p>
-                                 每周2凌晨1:00开始到下1周凌晨0：59作为游戏的循环周期。每周2凌晨1：00的时候，游戏数据的前进的码数将会重置，您也将从第1个码位开始游戏。
+                                 每周2凌晨1:00开始到<font class="red fClear">下周1</font>凌晨0：59作为游戏的循环周期。每周2凌晨1：00的时候，游戏数据的前进码数将会重置，您将从第1个码位开始游戏。
                              </p>
                          </dd>
                          <dt>■游戏的记录</dt>
                          <dd>
                              <p>
-                                 请务必将广告画面显示出来。当广告画面没有被显示出来的时候，已经前进的码数将会无效。
-                                 当广告画面还没有显示出来的时候，关闭了浏览器或者是跳转到了别的网页而导致中途切断游戏通讯的情况下，您游戏的数据将不会被记录。
-                                 万一您的通信被切断，请您再次访问游戏。您将能够从上次断开游戏时的画面开始继续游戏。
+                                 请务必将广告画面显示出来。当广告画面没有被显示出来的时候，已经前进的码数将会无效。 当广告画面还没有显示出来的时候，关闭了浏览器或者是跳转到了别的网页而导致中途切断游戏通讯的情况下，您游戏的数据将不会被记录。 万一您的通信被切断，请您再次访问游戏。您将能够从上次断开游戏时的画面开始继续游戏。
                              </p>
                          </dd>
                          <dt>■关于积分的奖励</dt>
@@ -159,44 +157,6 @@
                  </dd>
              </dl>
              
-             <!-- /すごろくの開催期間について ++++++++++++++++ -->
-             <dl class="frame">
-                 <dt class="frame">关于骰子游戏的举行时间</dt>
-                 <dd class="frame">
-                     <table class="table_list">
-                         <tr>
-                             <th>举行的时间和日期</th>
-                             <th>积分奖励</th>
-                         </tr>
-                             <tr>
-                             <td>2011/3/22(周二)AM11:00 ～ 2011/3/29(周二)AM10:59</td>
-                             <td rowspan="4">2011年4月末</td>
-                         </tr>
-                         <tr>
-                             <td>2011/3/29(周二)AM11:00 ～ 2011/4/5(周二)AM10:59</td>
-                         </tr>
-                         <tr>
-                             <td>2011/4/5(周二)AM11:00 ～ 2011/4/12(周二)AM10:59</td>
-                         </tr>
-                         <tr>
-                             <td>2011/4/12(周二)AM11:00 ～ 2011/4/19(周二)AM10:59</td>
-                         </tr>
-                         <tr>
-                         <td>2011/4/19(周二)AM11:00 ～ 2011/4/26(周二)AM10:59</td>
-                             <td rowspan="4">2011年5月末</td>
-                         </tr>
-                         <tr>
-                             <td>2011/4/26(周二)AM11:00 ～ 20115/3(周二)AM10:59</td>
-                         </tr>
-                         <tr>
-                             <td>2011/5/3(周二)AM11:00 ～ 2011/5/10(周二)AM10:59</td>
-                         </tr>
-                         <tr>
-                             <td>2011/5/10(周二)AM11:00 ～ 2011/5/17(周二)AM10:59</td>
-                         </tr>
-                     </table>
-                 </dd>
-             </dl>
              
              <!-- ++++++++++++++++ その他 ++++++++++++++++ -->
              <dl class="frame">
@@ -205,16 +165,13 @@
                      <table class="table_list">
                          <tr>
                              <th>实施时间</th>
-                             <td>2011年3月22日(周二)AM11:00～2011年5月31日(周二)AM10:59</td>
+                             <td>每周一凌晨1:00～下周一凌晨0:59</td>
                          </tr>
                          <tr>
                              <th>参加条件</th>
                              <td>仅限于本站点会员</p></td>
                          </tr>
-                         <tr>
-                             <th>奖励发表</th>
-                             <td>通关的用户结果将通过严格审查，一下的朋友将作为积分奖励对象。</td>
-                         </tr>
+                        
                      </table>
                  </dd>
              </dl>
