--- a/src/Jili/ApiBundle/Resources/views/Game/chick.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Game/chick.html.twig
@@ -9,7 +9,7 @@
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 </head>
-<body id="home">
+<body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div  style="margin:50px auto 0 auto; width:720px;" ><iframe src="{{ url | raw }}"width="720" height="3650" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" allowTransparency="true"></iframe> </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
