对应 issue #147 修改购物返利%。去掉米粒

--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
@@ -27,7 +27,7 @@
              {% if item.incentiveType==1 %}
                      <span class="reward"><font>{{ item.incentive }}</font>米粒</span>
              {% elseif item.incentiveType==2 %}
-                     <span class="reward">最高获消费额<font>{{ item.incentiveRate }}%</font>的米粒</span>
+                     <span class="reward">最高获消费额<font>{{ item.incentiveRate/100 }}%</font></span>
              {% else %}
              {% endif %}
     </div>
@@ -41,7 +41,7 @@
                       {% if item.incentiveType==1 %}
                          <span class="reward"><font>{{ item.incentive }}</font>米粒</span>
                         {% elseif item.incentiveType==2 %}
-                         <span class="reward">最高获消费额<font>{{ item.incentiveRate }}%</font>的米粒</span>
+                         <span class="reward">最高获消费额<font>{{ item.incentiveRate/100 }}%</font></span>
                          {% else %}
                      {% endif %}
               </div>
