--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -56,7 +56,7 @@ $(document).ready(function(){
     	    {% endif %}
         </div>
         <form action="{{ path('_user_info') }}" method="post" {{ form_enctype(form) }} id="form1">
-        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ asset(path('_user_changePwd'),'cdn1') }}">修改密码</a></p>
+        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ asset(path('_user_changePwd'),'cdn1') }}"><font style="color:#54B9E8;">修改密码</font></a></p>
         <p>{{ form_widget(form.attachment) }}<a class="upload">上传头像</a></p>
         <!-- <a class="upload" href="">上传头像</a> -->
         <p> {% if code %}
@@ -192,7 +192,9 @@ $(document).ready(function(){
         </tr>
          {% endfor %}
          <center><p><a href="{{ asset(path('_user_adtaste',{'type': 1}),'cdn1') }}">更多</a></p></center>
-         {% endif %}
+          {% else %}
+        <tr><td align="center" colspan="5">没有任务记录</td></tr>
+        {% endif %}
       </table>
      
     </div>
@@ -219,7 +221,9 @@ $(document).ready(function(){
         </tr>
         {% endfor %}
           <center><p><a href="{{  asset(path('_user_exchange',{'type': 1}),'cdn1') }}">更多</a></p></center>
-          {% endif %}
+        {% else %}
+        <tr><td align="center" colspan="5">没有兑换记录</td></tr>
+        {% endif %}
       </table>
     
     </div>
