--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/info.html.twig
@@ -57,6 +57,7 @@ function goto(){
 		{% else %}
 		{% endif %}
 		</p>
+		<p class="prompt"><span>商家审核需要8周，判定有效后立即到账（退货无返利）</span></p>
       {% if code==1 %}
           {% if orderStatus %}
 	            {% if orderStatus==1 %}
