--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -56,7 +56,7 @@ $(document).ready(function(){
     	    {% endif %}
         </div>
         <form action="{{ path('_user_info') }}" method="post" {{ form_enctype(form) }} id="form1">
-        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ asset(path('_user_changePwd'),'cdn1') }}"><font style="color:#54B9E8;">修改密码</font></a></p>
+        <p>欢迎您,{{ user.nick }}&nbsp;我的米粒：<span>{{ user.points }}</span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ asset(path('_user_changePwd'),'cdn1') }}" class="edit">修改密码 »</a></p>
         <p>{{ form_widget(form.attachment) }}<a class="upload">上传头像</a></p>
         <!-- <a class="upload" href="">上传头像</a> -->
         <p> {% if code %}
@@ -101,7 +101,7 @@ $(document).ready(function(){
    <form action="{{ path('_user_info') }}" method="post">
     <h3>个人信息<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
     <div class="content info">
-      <a class="edit"href="javascript:void(0);" id="change">修改 »</a>
+      <a class="edit" href="javascript:void(0);" id="change">修改 »</a>
       <ul>
         <li>
           <dd>登录账号：</dd>
@@ -191,7 +191,8 @@ $(document).ready(function(){
           </td>
         </tr>
          {% endfor %}
-         <center><p><a href="{{ asset(path('_user_adtaste',{'type': 1}),'cdn1') }}">更多</a></p></center>
+         <p class="prompt">商家审核需要8周，判定有效后立即到账（退货无返利）</p>
+         <a href="{{ asset(path('_user_adtaste',{'type': 1}),'cdn1') }}" class="more">更多 »</a>
           {% else %}
         <tr><td align="center" colspan="5">没有任务记录</td></tr>
         {% endif %}
@@ -220,7 +221,7 @@ $(document).ready(function(){
           <td>{% if item.status %} 兑换成功  {% else %} 处理中 {% endif %}</td>
         </tr>
         {% endfor %}
-          <center><p><a href="{{  asset(path('_user_exchange',{'type': 1}),'cdn1') }}">更多</a></p></center>
+          <a href="{{  asset(path('_user_exchange',{'type': 1}),'cdn1') }}" class="more">更多 »</a>
         {% else %}
         <tr><td align="center" colspan="5">没有兑换记录</td></tr>
         {% endif %}
