modify personal center

--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -67,7 +67,7 @@ function addClass(type){
   </aside>
   <article>
   	<div class="screen">
-    <p class="prompt">商家审核需要8周，判定有效后立即到账（退货无返利）</p>
+    <p class="prompt">*&nbsp;商家审核需要8周，判定有效后立即到账（退货无返利）</p>
   	<a href="javascript:void(0);" class="hover" onclick="addClass(1);return false;">近30天</a>
   	<a href="javascript:void(0);" onclick="addClass(2);return false;">过去6个月内</a>
   	<a href="javascript:void(0);" onclick="addClass(3);return false;">过去1年内</a>
